# nebula-metrics

./: .gitignore  404.html  ;  Cargo.toml  README.md  index.html  index.xml  package-lock.json  sitemap.xml
.github/workflows/: createRelease.yml  deployDocs.yml  testing.yml
about/: index.html
api/: index.html
assets/: metrics.sql
assets/db/: metrics.sql
categories/: index.html  index.xml
contributing/: index.html
dashboard/: .eslintrc.cjs  .gitignore  babel.config.js  index.html  jest-css-mock-transformer.js  jest.config.cjs  jest.setup.js  package-lock.json  package.json  process.html  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/AgGrid/: DiskChart.tsx  ProcessChart.tsx
dashboard/src/components/config/: ModeSelector.tsx
dashboard/src/components/graphs/: CpuLineGraph.tsx  DonutChart.tsx  MemLineGraph.tsx  PieChart.tsx  ProcessCpuGraph.tsx  ProcessMemGraph.tsx
dashboard/src/components/nav/: Logo.tsx  NavBar.tsx
dashboard/src/components/processes/: ProcessBar.tsx
dashboard/src/components/router/: Router.tsx
dashboard/src/components/sorting/: ProcessBar.tsx  SortingBar.tsx
dashboard/src/components/systemBar/: LeaderBoardBar.tsx
dashboard/src/context/: ModeContext.tsx  PIDcontext.tsx
dashboard/src/hooks/: useGetAllProcesses.ts  useGetCpuData.ts  useGetCurrentCpu.ts  useGetCurrentMemory.ts  useGetDiskData.ts  useGetMemoryData.ts  useGetProcess.ts
dashboard/src/pages/: 404Page.tsx  HomePage.test.tsx  HomePage.tsx  ProcessPage.test.tsx  ProcessPage.tsx  SystemPage.test.tsx  SystemPage.tsx
dashboard/src/queryClient/: CustomRender.tsx
dashboard/src/types/: cpuDataType.ts  diskUsageData.ts  filterType.ts  memoryType.ts  processDataType.ts
dashboard/test/: HomePage.test.tsx  ProcessPage.test.tsx  SystemPage.test.tsx
dashboard/test/__mocks__/: resizeObserverMock.js
debian/: nebula-metrics.service  nebula-server.service  postinst  postrm  preinst
docs/: hugo.toml
docs/content/: _index.md  about.md  api.md  contributing.md  install.md  overview.md
docs/content/overview/: _index.md  tech-stack.md
docs/layouts/partials/: favicon.html  logo.html
docs/layouts/shortcodes/: text-center.html
docs/static/resources/: openapi-spec.yml
install/: index.html
models/: Cargo.toml
models/src/: lib.rs  tables.rs
monitor/: Cargo.toml
monitor/src/: main.rs
monitor/src/monitor/: cpu.rs  disk.rs  error.rs  memory.rs  mod.rs  network.rs  process.rs
monitor/src/monitor/fixtures/: cpuTest.sql  cpuUpdateTest.sql  cpuUpdateTestEmpty.sql  diskTest.sql  memoryTest.sql  networkTest.sql  processTest.sql  processTest2.sql  processTestEmpty.sql  pruneTest.sql
overview/: index.html  index.xml
overview/tech-stack/: index.html
server/: Cargo.toml  build.rs
server/src/: api.rs  main.rs  response.rs  web.rs
server/src/api/: mod.rs  response.rs
server/src/fixtures/: apiTest.sql
tags/: index.html  index.xml
