[package]
name = "monitor"
version.workspace = true
authors.workspace = true
description = "The monitor component that polls and aggregates system metrics."
edition = "2021"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
procfs.workspace = true
"models" = { path = "./../models" }

[[bin]]
name = "nebula-monitor"
path = "src/main.rs"

[package.metadata.deb]
name = "nebula-metrics"
assets = [
    ["target/release/nebula-monitor", "usr/bin/", "755"],
    ["target/release/nebula-server", "usr/bin/", "755"],
    ["../assets/**/*", "var/nebula/", "444"]
]
depends = "$auto, sqlite3"
maintainer-scripts = "../debian/"
systemd-units = [
    { unit-name = "nebula-metrics", enable = false },
    { unit-name = "nebula-server", enable = false }
]
