[package]
name = "server"
version.workspace = true
authors.workspace = true
description = "The server component that hosts an API and website for accessing system metrics."
edition = "2021"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
"models" = { path = "./../models" }
serde.workspace = true

[[bin]]
name = "nebula-server"
path = "src/main.rs"
