[package]
name = "server"
version.workspace = true
authors.workspace = true
description = "The server component that hosts an API and website for accessing system metrics."
edition = "2021"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["trace", "fs", "cors"] }
"models" = { path = "./../models" }
serde.workspace = true
serde_json.workspace = true
tower = "0.4.13"
http-body-util = "0.1.0"

[[bin]]
name = "nebula-server"
path = "src/main.rs"
